# src/app/authentication/constants/routes.go
@@ -1,7 +1,8 @@
 package constants
 
 const (
-	CustomerSignupEndpoint = "/customer-signup"
-	CustomerSigninEndpoint = "/customer-signin"
-	CustomerOtpSigninEndpoint = "/customer-otpvalidate"
+	CustomerSignupEndpoint         = "/customer-signup"
+	CustomerSigninEndpoint         = "/customer-signin"
+	CustomerOtpSigninEndpoint      = "/customer-otpvalidate"
+	CustomerchangepasswordEndpoint = "/customer-changepassword"
 )
